Fixed help/tutorial overlay on small screens

--- a/style.scss
+++ b/style.scss
@@ -515,6 +515,7 @@ body {
         }
 
         @media only screen and (max-width: 768px) {
+            top: 190px;
             .overlay-muscle {
                 top: 150px;
             }
